# VaultSeek

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  HOW-TO-RUN.txt  LICENSE  README.md  alembic.ini  pyproject.toml
.github/workflows/: ci.yml  release.yml
config/: defaults.json
docs/: AI_RULES.md  ARCHITECTURAL_UPDATE_001.md  ARCHITECTURE.md  DECISIONS.md  DEVELOPMENT_ROADMAP.md  NICOTINE_PLUS.md  PROJECT_PLAN.md  README.md  ROADMAP.md  TECH_STACK.md
docs/architecture/: 01-overview.md  02-folder-layout.md  03-database-schema.md  04-service-layer.md  05-plugin-api.md  06-gui-architecture.md  07-roadmap.md  08-performance.md  09-testing-strategy.md  10-revision-v2.md  11-ci-pipeline.md  12-pipeline-engine-v3.md  README.md
packaging/: README.md  _build_log.txt  build_setup_exe.py  build_windows.ps1  fetch_vendor.py  installer.iss  musicvault.spec  vaultseek.spec  vaultseek_setup.py  vendor_manifest.json
scripts/: nicotine_plus_ndjson_proxy.py  setup-github-project.ps1  smoke_library_scan.py
src/musicvault/: __init__.py  __main__.py  app.py
src/musicvault/core/: config.py  container.py  exceptions.py  native_bins.py
src/musicvault/db/: engine.py  tables.py
src/musicvault/db/migrations/: __init__.py  env.py  runner.py
src/musicvault/db/repositories/: album_repo.py  artist_repo.py  artwork_repo.py  duplicate_repo.py  file_identity_repo.py  job_repo.py  library_repo.py  media_server_repo.py  metadata_confidence_repo.py  operation_repo.py  review_repo.py  rule_repo.py  track_repo.py
src/musicvault/gui/: __init__.py  app.py  main_window.py  theme.py
src/musicvault/gui/bridge/: __init__.py  qt_event_bridge.py
src/musicvault/gui/views/: __init__.py  duplicates_page.py  jobs_page.py  library_page.py  review_page.py  rules_page.py  settings_page.py  stub_page.py
src/musicvault/models/entities/: job.py  library.py  operation.py  review_item.py  rule.py  track.py
src/musicvault/models/interfaces/: artwork.py  media_server.py  metadata.py
src/musicvault/models/services/: organize_engine.py  quality_scorer.py  rename_engine.py
src/musicvault/models/value_objects/: field_confidence.py  file_identity.py  rule_action.py  rule_condition.py
src/musicvault/plugins/: base.py  imaging.py  manager.py
src/musicvault/services/: events.py  job_dispatcher.py  metadata_arbitrator.py  operation_orchestrator.py  review_queue_service.py  rules_engine.py  watch_folder_service.py
src/musicvault/services/dto/: operation_dto.py  review_dto.py
src/musicvault/workers/io/: artwork_worker.py  media_server_worker.py  metadata_worker.py  organizer_worker.py  rule_worker.py
src/vaultseek/: __init__.py  __main__.py  app.py
src/vaultseek/core/: __init__.py  config.py  container.py  event_bus.py  exceptions.py  logging.py  native_bins.py  paths.py  single_instance.py
src/vaultseek/db/: __init__.py  engine.py  tables.py  uuid_utils.py  writer.py
src/vaultseek/db/migrations/: __init__.py  env.py  runner.py
src/vaultseek/db/repositories/: __init__.py  acquisition_job_repo.py  album_repo.py  artist_repo.py  artwork_repo.py  base.py  duplicate_repo.py  file_identity_repo.py  job_repo.py  library_repo.py  media_server_repo.py  metadata_confidence_repo.py  operation_repo.py  review_repo.py  rule_repo.py  track_repo.py  trusted_folder_repo.py
src/vaultseek/gui/: __init__.py  app.py  async_task.py  datetime_format.py  main_window.py  theme.py
src/vaultseek/gui/bridge/: __init__.py  qt_event_bridge.py
src/vaultseek/gui/viewmodels/: __init__.py
src/vaultseek/gui/views/: acquisition_page.py  activity_page.py  albums_page.py  artists_page.py  artwork_page.py  dashboard_page.py  discogs_page.py  duplicates_page.py  find_music_page.py  (+9 more)
src/vaultseek/models/: __init__.py
src/vaultseek/plugins/: __init__.py  base.py  manager.py
src/vaultseek/services/: __init__.py  acquisition_attention.py  acquisition_automation_service.py  acquisition_bootstrap.py  acquisition_engine.py  acquisition_labels.py  acquisition_outcomes.py  acquisition_runner.py  acquisition_workflow.py  activity_feed.py  album_track_display.py  dashboard.py  default_rules.py  download_manager.py  events.py  folder_trust.py  import_pipeline.py  incoming_cleanup.py  job_dispatcher.py  job_queue_service.py  library_quality.py  library_reset.py  library_scan_actions.py  metadata_arbitrator.py  missing_media_analyzer.py  missing_media_cache.py  operation_orchestrator.py  provider_manager.py  quality_presets.py  quality_upgrade_analyzer.py  report_exporters.py  report_service.py  review_queue_service.py  rules_engine.py  scoring_engine.py  search_dispatcher.py  verification_engine.py  wanted.py  watch_folder_service.py
src/vaultseek/workers/: __init__.py
tests/: bootstrap_helpers.py  conftest.py
tests/integration/: test_bootstrap.py  test_main.py  test_migrations.py
tests/unit/core/: test_acquisition_config.py  test_config.py  test_container.py  test_event_bus.py  test_exceptions.py  test_live_log_buffer.py  test_logging.py  test_native_bins.py  test_paths.py  test_single_instance.py
tests/unit/db/: test_base_repository.py  test_engine.py  test_tables.py  test_uuid_utils.py  test_writer.py
tests/unit/gui/: test_async_task.py  test_datetime_format.py  test_desktop.py  test_jump_palette.py  test_main_window.py
tests/unit/services/: conftest.py  test_acquisition_attention.py  test_acquisition_bootstrap.py  test_acquisition_engine.py  test_acquisition_labels.py  test_acquisition_pipeline.py  test_acquisition_retry_policy.py  test_acquisition_runner.py  test_acquisition_workflow.py  test_activity_feed.py  test_album_track_display.py  test_dashboard.py  test_folder_trust.py  test_incoming_cleanup.py  test_job_dispatcher.py  test_job_queue_service.py  test_library_quality.py  test_library_reset.py  test_metadata_arbitrator.py  test_missing_media_analyzer.py  test_operation_orchestrator.py  test_provider_manager.py  test_quality_presets.py  test_report_service.py  test_review_queue_service.py  test_rules_engine.py  test_verification_import.py  test_wanted.py  test_watch_folder_service.py
tests/unit/workers/: conftest.py
(+173 files in other folders)
