[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vaultseek"
version = "1.0.0"
description = "Find what you're missing — music discovery and acquisition companion to MusicVault."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.14"
authors = [{ name = "VaultSeek Contributors" }]
keywords = ["music", "library", "navidrome", "jellyfin", "plex", "metadata", "musicbrainz"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.14",
    "Topic :: Multimedia :: Sound/Audio :: Editors",
]

# Runtime dependencies for the full application. Phase 1 only exercised the
# standard library plus loguru; the remainder are declared upfront so later
# phases add functionality without churning project metadata.
dependencies = [
    "PySide6>=6.7",
    "SQLAlchemy>=2.0",
    "alembic>=1.13",
    "mutagen>=1.47",
    "pyacoustid>=1.3",
    "rapidfuzz>=3.9",
    "Pillow>=10.4",
    "requests>=2.32",
    "Send2Trash>=1.8",
    "psutil>=6.0",
    "loguru>=0.7",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
    "pytest-github-actions-annotate-failures>=0.2",
    "pytest-qt>=4.4",
    "mypy>=1.10",
    "ruff>=0.5",
    "black>=24.0",
    "import-linter>=2.0",
    "responses>=0.25",
    "types-requests>=2.32",
    "types-psutil>=6.0",
]
build = [
    "pyinstaller>=6.0",
]

[project.scripts]
vaultseek = "vaultseek.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
target-version = "py314"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "ANN", "B", "SIM"]
ignore = [
    "ANN401", # Any is sometimes required at plugin/DTO boundaries
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["ANN"]

[tool.black]
line-length = 100
target-version = ["py314"]

[tool.mypy]
python_version = "3.14"
strict = true
packages = ["vaultseek"]
mypy_path = "src"
explicit_package_bases = true

[[tool.mypy.overrides]]
module = ["acoustid.*", "send2trash.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
qt_api = "pyside6"
markers = [
    "performance: performance benchmarks (excluded from CI by default)",
]

[tool.coverage.run]
source = ["src/vaultseek"]

[tool.importlinter]
root_packages = ["vaultseek"]

[[tool.importlinter.contracts]]
name = "Models isolation"
type = "forbidden"
source_modules = ["vaultseek.models"]
forbidden_modules = [
    "vaultseek.gui",
    "vaultseek.db",
    "vaultseek.services",
    "vaultseek.workers",
    "vaultseek.plugins",
]

[[tool.importlinter.contracts]]
name = "GUI does not touch persistence or workers directly"
type = "forbidden"
source_modules = ["vaultseek.gui"]
forbidden_modules = [
    "vaultseek.db",
    "vaultseek.workers",
]
allow_indirect_imports = true

[[tool.importlinter.contracts]]
name = "DB layer stays below services and workers"
type = "forbidden"
source_modules = ["vaultseek.db"]
forbidden_modules = [
    "vaultseek.gui",
    "vaultseek.services",
    "vaultseek.workers",
]
